--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <h1>Como vai funcionar:</h1>
 
     <h2>Em cada aba diferente irá ter um gênero diferente de filme.</h2>
-    <img id= "imagemiguel"src="imagemiguel.jpg">
+    <img id= "cinema"src="cinema.jpg">
 
     </div>
     <div class="rodape">
-         Miguel Marega N23/Bryan Naamã N36
+         Miguel Marega N23
     </div>
 
     <div class="caixa1"></div>
